0.041 2023-05-09
  [Prerequirement Changes]
    SPVM::Sys 0.481 is required.
    SPVM::Regex is 0.241002 is required.
    SPVM is 0.976 is required.
0.04 2023-03-15
  [Prerequirement Changes]
    * SPVM::Sys 0.43+ is needed.
0.03 2023-03-06
  [Prerequirement Changes]
    * SPVM 0.9695+ is needed.
  [Incompatible Changes]
    * Removed the File::Basename::Instance::Interface class.
    * Remvoed the has_interfaces method in the File::Basename::Instance.
0.02 2023-02-10
  [Incompatible Changes]
    * Current File::Basename is copied to File::Basename::Instance.
    * File::Basename::Unix is renamed to File::Basename::Instance::Unix.
    * File::Basename::Win32 is renamed to File::Basename::Instance::Win32.
    * File::Basename::Interface is renamed to File::Basename::Instance::Interface.
    * The definition of the methods of the File::Basename are changed and removed.
      [Removed]
      - static method new : File::Basename ();
      - method has_interfaces : int ();
      [Before]
      -  method fileparse : string[] ($path : string);
      -  method basename : string ($path : string);
      -  method dirname : string ($path : string);
      [After]
      +  static method fileparse : string[] ($path : string);
      +  static method basename : string ($path : string);
      +  static method dirname : string ($path : string);
      
0.01 2023-01-26
  [Changes]
    * First release.
  