@@ -1,3 +1,6 @@
+# Copyright (c) 2023 Yuki Kimoto
+# MIT License
+
 class File::Basename::Instance {
   use File::Basename::Instance::Win32;
   use File::Basename::Instance::Unix;
