@@ -1,3 +1,6 @@
+# Copyright (c) 2023 Yuki Kimoto
+# MIT License
+
 class File::Basename::Instance::Win32 extends File::Basename::Instance::Unix {
   use Regex;
   
